language-server/src/tests/snapshots/gleam_language_server__tests__hover__hover_for_string_prefix_pattern_prefix_alias_alternative_definition.snap
---
source: language-server/src/tests/hover.rs
expression: "\npub fn main() {\n  case \"wibble\" {\n    \"wib\" as prefix <> rest | \"wob\" as prefix <> rest -> prefix <> rest\n    other -> other\n  }\n}\n"
---

pub fn main() {
  case "wibble" {
    "wib" as prefix <> rest | "wob" as prefix <> rest -> prefix <> rest
                                       ↑▔▔▔▔▔                          
    other -> other
  }
}


----- Hover content (markdown) -----
```gleam
String
```
