language-server/src/tests/snapshots/gleam_language_server__tests__hover__hover_for_string_prefix_pattern_suffix_variable.snap
---
source: language-server/src/tests/hover.rs
expression: "\npub fn main() {\n  case \"wibble\" {\n    \"wib\" as alias <> suffix -> alias <> suffix\n    other -> other\n  }\n}\n"
---

pub fn main() {
  case "wibble" {
    "wib" as alias <> suffix -> alias <> suffix
                      ↑▔▔▔▔▔                   
    other -> other
  }
}


----- Hover content (markdown) -----
```gleam
String
```
