language-server/src/tests/snapshots/gleam_language_server__tests__hover__hover_for_string_prefix_pattern_suffix_variable_discard.snap
---
source: language-server/src/tests/hover.rs
expression: "\npub fn main() {\n  case \"wibble\" {\n    \"wib\" <> _discard -> Nil\n    other -> Nil\n  }\n}\n"
---

pub fn main() {
  case "wibble" {
    "wib" <> _discard -> Nil
    ▔▔▔▔▔▔▔▔▔↑▔▔▔▔▔▔▔       
    other -> Nil
  }
}


----- Hover content (markdown) -----
```gleam
String
```
