language-server/src/tests/snapshots/gleam_language_server__tests__hover__hover_function_arg_annotation_with_documentation.snap
---
source: language-server/src/tests/hover.rs
expression: "\n/// Exciting documentation\n/// Maybe even multiple lines\ntype Wibble {\n    Wibble(arg: String)\n}\n\nfn identity(x: Wibble) -> Wibble {\n  x\n}\n"
---

/// Exciting documentation
/// Maybe even multiple lines
type Wibble {
    Wibble(arg: String)
}

fn identity(x: Wibble) -> Wibble {
               ▔▔▔▔▔↑             
  x
}


----- Hover content (markdown) -----
```gleam
app.Wibble
```
 Exciting documentation
 Maybe even multiple lines
