language-server/src/tests/snapshots/gleam_language_server__tests__hover__hover_function_argument.snap
---
source: language-server/src/tests/hover.rs
expression: "\n/// Exciting documentation\n/// Maybe even multiple lines\nfn append(x, y) {\n  x <> y\n}\n"
---

/// Exciting documentation
/// Maybe even multiple lines
fn append(x, y) {
          ↑      
  x <> y
}


----- Hover content (markdown) -----
```gleam
String
```
